--- a/app/views/modal/forget.disconnected.html
+++ b/app/views/modal/forget.disconnected.html
@@ -15,6 +15,6 @@
  </p>
 </div>
 <div class="modal-footer">
-  <button type="button" class="btn btn-default" ng-click="$dismiss()">Remember</button>
-  <button type="button" class="btn btn-primary" ng-click="$close()">Forget</button>
+  <button type="button" class="btn btn-default" ng-click="$close('remember')">Remember</button>
+  <button type="button" class="btn btn-primary" ng-click="$close('forget')">Forget</button>
 </div>
