non-overlapping forget modals logic (does NOT touch forget.wipe)

--- a/app/views/modal/forget.disconnected.html
+++ b/app/views/modal/forget.disconnected.html
@@ -1,6 +1,6 @@
 <!---this modal is displayed when device is disconnected for the first time-->
 <div class="modal-header">
-  <h4 class="modal-title">Forget device?</h4>
+  <h4 class="modal-title">Forget device {{device.label()}}?</h4>
 </div>
 <div class="modal-body">
   <p>Would you like myTREZOR to forget your device or to remember it, so that
