--- a/app/views/modal/forget.requested.html
+++ b/app/views/modal/forget.requested.html
@@ -1,6 +1,6 @@
 <!---this modal is displayed when forget is requested-->
 <div class="modal-header">
-  <h4 class="modal-title">Forget device?</h4>
+  <h4 class="modal-title">Forget device {{device.label()}}?</h4>
 </div>
 <div class="modal-body">
   <p>Do you want to forget your device?</p>
@@ -13,6 +13,6 @@
 
 </div>
 <div class="modal-footer">
-  <button type="button" class="btn btn-default" ng-click="$dismiss()">Don't forget</button>
-  <button type="button" class="btn btn-primary" ng-click="$close()">Forget</button>
+  <button type="button" class="btn btn-default" ng-click="$close('dont-forget')">Don't forget</button>
+  <button type="button" class="btn btn-primary" ng-click="$close('forget')">Forget</button>
 </div>
