--- a/app/views/account/send.html
+++ b/app/views/account/send.html
@@ -112,10 +112,8 @@
               <div class="col-sm-10 col-sm-push-2">
                 <div class="clearfix">
                   <div class="pull-left"
-                       tooltip="Please connect your device to send coins."
-                       tooltip-trigger="{{
-                       device.status() !== 'connected' ? 'mouseenter' : 'manual'
-                       }}"
+                       tooltip="{{device.status() !== 'connected'? 'Please connect your device to send coins.':null}}"
+                       tooltip-trigger="mouseenter"
                        tooltip-placement="bottom">
                     <button type="submit"
                             class="btn btn-primary btn-lg"
